name:                haskell-advent-of-code
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-advent-of-code#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- executable exercise-02
--   hs-source-dirs:      02
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base, parsec
--   default-language:    Haskell2010

-- executable exercise-03
--   hs-source-dirs:      03
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base, split, text, extra
--   default-language:    Haskell2010

-- executable exercise-04
--   hs-source-dirs:      04
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base, regex-pcre, split
--   default-language:    Haskell2010

-- executable exercise-06
--   hs-source-dirs:      06
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--   default-language:    Haskell2010

executable exercise-13
  hs-source-dirs:      13
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, split
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-advent-of-code
